fixed scrollbar issue

--- a/farmTrackerStyle.scss
+++ b/farmTrackerStyle.scss
@@ -36,7 +36,7 @@ body {
         .your_assets--container {
             grid-row: 1/-1;
             grid-column: 1/2;
-            background-color: rgb(107, 255, 186);
+            background-color: rgb(103, 255, 184);
         }
     
         .market--header {
